--- a/utility/consistency/module.yaml
+++ b/utility/consistency/module.yaml
@@ -26,13 +26,33 @@ explanation: |
     parameter, and vice versa.  This is off by default as it's a little slower.
     It uses the camb code directly so should match up.
 
-    The standard set of relations is in consistency.py and relates the standard LCDM
-    parameters, including massive neutrinos.
+    The below relations are used by default:
 
-    It also converts log1e10As or A_s_1e9 to A_s, and (S_8, Omega_m) to (sigma_8, Omega_m).
-
-
-params:
+    omega_m=ommh2/h/h
+    omega_b=ombh2/h/h
+    omega_c=omch2/h/h
+    omega_nu=omnuh2/h/h
+    ommh2=omega_m*h*h
+    ombh2=omega_b*h*h
+    omch2=omega_c*h*h
+    omnuh2=omega_nu*h*h
+    omch2=ommh2-ombh2
+    ommh2=omch2+ombh2
+    baryon=omega_b/omega_m
+    omega_b=omega_m*baryon_fraction
+    omega_m=omega_b/baryon_fraction
+    baryon_fraction=ombh2/ommh2
+    ombh2=ommh2*baryon_fraction
+    ommh2=ombh2/baryon_fraction
+    omega_m=omega_b+omega_c
+    h=hubble/100
+    hubble=h*100
+    omega_lambda=1-omega_m-omega_k-omega_nu
+    omega_m=1-omega_lambda-omega_k-omega_nu
+    omega_k=1-omega_m-omega_lambda-omega_nu
+    omega_nu=1-omega_m-omega_lambda-omega_k
+    mnu=omnuh2 * 93.14
+    omnuh2=mnu / 93.14"params:
     verbose:
         meaning: 'Whether to print how derived parameters were calculated and what assumptions used'
         type: bool
@@ -43,15 +63,9 @@ params:
         default: false
 
     relations_file:
-        meaning: >
-            Path to an alternative parameter relations file. Relations should be specified in
-            the form 'new_parameter=parameter_b*parameter_b' with one per line.
-        type: str
-        default:
-    extra_relations:
-        meaning: >
-            Extra relations to be added to the default list. Relations should be specified in
-            the form 'new_parameter=parameter_b*parameter_b,new_parameter2=parameter_d/parameter_e' 
+        meaning: 'Path to an alternative parameter relations file. Relations should be specified in \
+                  the form \'parameter_a=parameter_b*parameter_b\' with no white space and one per \
+                  line.'
         type: str
         default:
 
