--- a/utility/consistency/module.yaml
+++ b/utility/consistency/module.yaml
@@ -26,7 +26,9 @@ explanation: |
     parameter, and vice versa.  This is off by default as it's a little slower.
     It uses the camb code directly so should match up.
 
-    The below relations are used by default:
+    The below relations are used by default. These can either be replaced entirely by
+    those in a file given by the relations_file setup parameter or added to as a comma
+    separated list using the extra_relations setup parameter.
 
     omega_m=ommh2/h/h
     omega_b=ombh2/h/h
@@ -66,6 +68,12 @@ explanation: |
         meaning: 'Path to an alternative parameter relations file. Relations should be specified in \
                   the form \'parameter_a=parameter_b*parameter_b\' with no white space and one per \
                   line.'
+        type: str
+        default:
+    extra_relations:
+        meaning: 'Extra relations to be added to the default list. Relations should be specified in \
+                  the form \'parameter_a=parameter_b*parameter_b,parameter_c=parameter_d/parameter_e\' 
+                  with no white space and comma separated.'
         type: str
         default:
 
