--- a/utility/consistency/module.yaml
+++ b/utility/consistency/module.yaml
@@ -53,8 +53,8 @@ explanation: |
     omega_m=1-omega_lambda-omega_k-omega_nu
     omega_k=1-omega_m-omega_lambda-omega_nu
     omega_nu=1-omega_m-omega_lambda-omega_k
-    mnu=omnuh2 * 93.14
-    omnuh2=mnu / 93.14"
+    mnu=omnuh2*93.14
+    omnuh2=mnu/93.14
 
 params:
     verbose:
@@ -67,15 +67,15 @@ params:
         default: false
 
     relations_file:
-        meaning: 'Path to an alternative parameter relations file. Relations should be specified in \
-                  the form \'new_parameter=parameter_b*parameter_b\' with no white space and one per \
-                  line.'
+        meaning: >
+            Path to an alternative parameter relations file. Relations should be specified in
+            the form 'new_parameter=parameter_b*parameter_b' with one per line.
         type: str
         default:
     extra_relations:
-        meaning: 'Extra relations to be added to the default list. Relations should be specified in \
-                  the form \'new_parameter=parameter_b*parameter_b,new_parameter2=parameter_d/parameter_e\' 
-                  with no white space and comma separated.'
+        meaning: >
+            Extra relations to be added to the default list. Relations should be specified in
+            the form 'new_parameter=parameter_b*parameter_b,new_parameter2=parameter_d/parameter_e' 
         type: str
         default:
 
