Updated ini files One remaining task is to pull in the cosebis code But first to do this properly with a fork

--- a/examples/des-y3_and_kids-1000.ini
+++ b/examples/des-y3_and_kids-1000.ini
@@ -4,6 +4,10 @@
 sampler = test
 verbosity = standard
 
+[test]
+save_dir=output/des-y3_and_kids-1000
+fatal_errors=T
+
 ; We will carry out a joint Hybrid pipeline analysis of 
 ; DES Y3 xi_pm and KiDS-1000 COSEBIS including scale cuts (2'<theta_min<300')
 [DEFAULT]
@@ -11,12 +15,12 @@ DATAFILE=likelihood/des-y3_and_kids-1000/DES-Y3_xipm_and_KiDS-1000_COSEBIs_2.0_3
 RUN_NAME = des-y3_and_kids-1000
 
 [pipeline]
-modules =   sample_S8 sigma8toAs camb extrapolate 
+modules =   consistency camb extrapolate 
             fits_nz_des correlated_dz_priors fits_nz_kids photoz_bias_des photoz_bias_kids 
             fast_pt choose_des_ia IA 
-            pk_to_cl_des add_intrinsic add_eb shear_2pt_eplusb shear_2pt_eminusb choose_xip shear_m_bias 2pt_like 
+            pk_to_cl_des add_intrinsic 2pt_shear shear_m_bias 2pt_like 
             choose_kids_ia IA 
-            pk_to_cl_kids add_intrinsic cosebis scale_cuts cosebis_like
+            pk_to_cl_kids add_intrinsic cosebis cosebis_like
 likelihoods = 2pt cosebis
 values  = examples/des-y3_and_kids-1000-values.ini
 priors  = examples/des-y3_and_kids-1000-priors.ini
@@ -32,14 +36,10 @@ quiet = F
 timing = F
 debug = T
 
-%TO DO
-[sample_S8]
-file = %(KIDS_MODULES)s/utils/sample_S8.py
-s8_name = s_8_input
-
-%TO DO
-[sigma8toAs]
-file = %(KIDS_MODULES)s/utils/sigma8toAs.py
+; Since CosmoSIS v3, the consistency interface allows for sampling over S8
+; Here we set up the non-linear power spectrum
+[consistency]
+file = utility/consistency/consistency_interface.py
 
 [camb]
 file = boltzmann/camb/camb_interface.py
@@ -61,14 +61,16 @@ feedback=0
 file = boltzmann/extrapolate/extrapolate_power.py
 kmax = 500.
 
+; Next we define the redshift bins and how we're going to marginalise over
+; our uncertainty on these distributions
 [fits_nz_des]
 file = number_density/load_nz_fits/load_nz_fits.py
-nz_file = $DATAFILE
-data_sets = %(redshift_name_des)s_des
+nz_file = %(DATAFILE)s
+data_sets = source_des
 
-
+; This module allows for correlated priors for KiDS given a covariance matrix
 [correlated_dz_priors]
-file = %(KIDS_MODULES)s/utils/correlated_priors.py
+file = number_density/correlated_priors/correlated_priors.py
 uncorrelated_parameters =   nofz_shifts_kids/uncorr_bias_1 nofz_shifts_kids/uncorr_bias_2 
                             nofz_shifts_kids/uncorr_bias_3 nofz_shifts_kids/uncorr_bias_4 
                             nofz_shifts_kids/uncorr_bias_5
@@ -78,105 +80,154 @@ output_parameters = nofz_shifts_kids/bias_1 nofz_shifts_kids/bias_2
 covariance = likelihood/des-y3_and_kids-1000/nofz_covariance/SOM_cov_multiplied.asc
 
 [fits_nz_kids]
-file = %(CSL_PATH_KIDS)s/number_density/load_nz_fits/load_nz_fits.py
-nz_file = $DATAFILE
-data_sets = %(redshift_name_kids)s_kids
-; data_sets_output = %(redshift_name_kids)s_kids
-
-
+file = number_density/load_nz_fits/load_nz_fits.py
+nz_file = %(DATAFILE)s
+data_sets = source_kids
 
 [photoz_bias_des]
-file = %(CSL_PATH_KIDS)s/number_density/photoz_bias/photoz_bias.py
+file = number_density/photoz_bias/photoz_bias.py
 mode = additive
-sample = nz_%(redshift_name_des)s_des
+sample = nz_source_des
 bias_section = wl_photoz_errors_des
 interpolation = cubic
 output_deltaz = T
 output_section_name = delta_z_out_des
 
-
 [photoz_bias_kids]
-file = %(CSL_PATH_KIDS)s/number_density/photoz_bias/photoz_bias.py
+file = number_density/photoz_bias/photoz_bias.py
 mode = additive
-sample = nz_%(redshift_name_kids)s_kids
+sample = nz_source_kids
 bias_section = nofz_shifts_kids
 interpolation = cubic
 output_deltaz = T
 output_section_name = delta_z_out_kids
 
-[pk_to_cl_kids]
-file = cosmosis-standard-library/structure/projection/project_2d.py
-ell_min_logspaced = 0.1
-ell_max_logspaced = 5.0e5
-n_ell_logspaced = 100 
-shear-shear = source_kids-source_kids
-shear-intrinsic = source_kids-source_kids
-intrinsic-intrinsic = source_kids-source_kids
-intrinsicb-intrinsicb=source_kids-source_kids
+; Here we are using the TATT modules for our IA model
+; to allow for flexibility in extensions to our fiducial analyses
+; The hybrid set-up uses NLA-z, with the non-NLA parameters
+; in the TATT model are set to zero in the values file
+
+[fast_pt]
+file = structure/fast_pt/fast_pt_interface.py
+do_ia = T
+k_res_fac = 0.5
 verbose = F
-get_kernel_peaks = F
-sig_over_dchi = 20. 
-shear_kernel_dchi = 10.
 
+; In our fiducial analysis we allow for the DES and KiDS
+; surveys to have independent IA parameters.  Call choose_ia_params
+; and it updates the IA parameter name before the IA module is called
+[choose_des_ia]
+file =  intrinsic_alignments/choose_ia/choose_ia_params.py
+suffix = des
 
+[IA]
+file = intrinsic_alignments/tatt/tatt_interface.py
+sub_lowk=F
+sub_const=F
+include_s2_terms=F
+do_galaxy_intrinsic=F
+ia_model=tatt
+Asigma8=F
+linterp=F
+
+; As DES and KiDS are assumed to be uncorrelated we can 
+; calculate the likelihoods independently
+
+; We start with DES
 [pk_to_cl_des]
-file = cosmosis-standard-library/structure/projection/project_2d.py
+file = structure/projection/project_2d.py
 ell_min_logspaced = 0.1
 ell_max_logspaced = 5.0e5
 n_ell_logspaced = 100
 shear-shear = source_des-source_des
 shear-intrinsic = source_des-source_des
 intrinsic-intrinsic = source_des-source_des
-intrinsicb-intrinsicb=source_des-source_des
+intrinsicb-intrinsicb = source_des-source_des
 verbose = F
 get_kernel_peaks = F
 sig_over_dchi = 20.
 shear_kernel_dchi = 10.
 
-[choose_des_ia]
-file =  intrinsic_alignments/choose_ia/choose_ia_params.py
-suffix = des
- 
+[add_intrinsic]
+file=shear/add_intrinsic/add_intrinsic.py
+shear-shear=T
+position-shear=F
+perbin=F
+
+[2pt_shear]
+file = shear/cl_to_xi_fullsky/cl_to_xi_interface.py
+ell_max = 40000
+xi_type = EB
+theta_file=%(DATAFILE)s
+bin_avg = T
+; these get
+input_section_name = shear_cl  shear_cl_bb
+output_section_name = shear_xi_plus  shear_xi_minus
+
+[shear_m_bias]
+file = shear/shear_bias/shear_m_bias.py
+m_per_bin = True
+; Despite the parameter name, this can operate on xi as well as C_ell.
+cl_section = shear_xi_plus shear_xi_minus
+verbose = F
+
+; This is the 2pt_likelihood module.  It's all-singing all-dancing
+; covering xi_pm, gamma_t and wtheta. 
+; Don't be confused by the name "point mass" in the title.
+; This addition only concerns the likelihood calculation of the GGL statistic
+; which we're not analysing here (data_sets = xip xim)
+[2pt_like]
+file = likelihood/2pt/2pt_point_mass/2pt_point_mass.py
+do_pm_marg = True
+do_pm_sigcritinv = True
+sigma_a = 10000.0
+no_det_fac = False
+include_norm = False
+data_file = %(DATAFILE)s
+data_sets = xip xim
+make_covariance=F
+covmat_name=COVMAT
+; The scale cuts (angle_range_xi*_*_*) are listed in a separate file
+; Here we use the LCDM-optimised scale cuts from Amon/Secco/Samuroff et al 2022
+%include examples/des-y3-LCDM-optimised-scale-cuts.ini
+
+
+; Now time to move on to KiDS
+; First rename the IA parameters so they are independent of the
+; IA parameters for DES.  If you want to use the same set of parameters
+; for both surveys, remove both instances of this module and update
+; the values file accordingly
 [choose_kids_ia]
 file = intrinsic_alignments/choose_ia/choose_ia_params.py
 suffix = kids
 
-
-
+[pk_to_cl_kids]
+file = structure/projection/project_2d.py
+ell_min_logspaced = 0.1
+ell_max_logspaced = 5.0e5
+n_ell_logspaced = 100 
+shear-shear = source_kids-source_kids
+shear-intrinsic = source_kids-source_kids
+intrinsic-intrinsic = source_kids-source_kids
+intrinsicb-intrinsicb = source_kids-source_kids
+verbose = F
+get_kernel_peaks = F
+sig_over_dchi = 20. 
+shear_kernel_dchi = 10.
 
 [cosebis]
-file = %(COSEBIs_PATH)s/libcosebis.so
-theta_min = %(tmin)s ; default=1
-theta_max = %(tmax)s ; default=100
-n_max = %(nmax)s ; default=10
+file=/Users/cheymans/CosmoSIS/2pt_stats/cl_to_cosebis/cl_to_cosebis_interface.so
+theta_min = 2.0 ; default=1
+theta_max = 300.0 ; default=100
+n_max = 5 ; default=10
 input_section_name = shear_cl
 output_section_name = cosebis
-
-Wn_Output_FolderName = ${BASE}/modules/kids/cosebis/WnLog/ 
-Roots_n_Norms_FolderName = ${BASE}/modules/kids/cosebis/TLogsRootsAndNorms ; default is ./cosebis/TLogsRootsAndNorms
-Tn_Output_FolderName = ${BASE}/modules/kids/cosebis/Tn_Output_Folder ; default is ./cosebis/TpnLog/
-
-[scale_cuts]
-file = ${BASE}/modules/kids/scale_cuts/scale_cuts.py
-output_section_name = scale_cuts_output
-data_and_covariance_fits_filename = ${DATAFILE}
-use_stats = En
-keep_ang_En   = 0.5 5.5
-xi_plus_extension_name = xip
-xi_minus_extension_name = xim
-bandpower_ggl_extension_name = PneE
-bandpower_e_cosmic_shear_extension_name = PeeE
-cosebis_extension_name = En
-xi_plus_section_name = shear_xi_plus_binned
-xi_minus_section_name = shear_xi_minus_binned
-bandpower_ggl_section_name = bandpower_galaxy_shear
-bandpower_e_cosmic_shear_section_name = bandpower_shear_e
-cosebis_section_name = cosebis
-simulate = F
-simulate_with_noise = F
-mock_filename = mock_kids1000_cosebis_nonoise
+;Wn_Output_FolderName = ${BASE}/modules/kids/cosebis/WnLog/ 
+;Roots_n_Norms_FolderName = ${BASE}/modules/kids/cosebis/TLogsRootsAndNorms ; default is ./cosebis/TLogsRootsAndNorms
+;Tn_Output_FolderName = ${BASE}/modules/kids/cosebis/Tn_Output_Folder ; default is ./cosebis/TpnLog/
 
 [cosebis_like]
-file = ${BASE}/modules/kids/utils/mini_like.py
-input_section_name = scale_cuts_output
+file = likelihood/2pt/simple_like.py
+data_set = En n
+data_file = %(DATAFILE)s
 like_name = cosebis
