--- a/examples/des-y3_and_kids-1000-values.ini
+++ b/examples/des-y3_and_kids-1000-values.ini
@@ -57,13 +57,13 @@ logt_agn = 7.3 7.8 8.0
 
 ; This is the set of cosmological parameter priors that were found to 
 ; introduce the least projection effects on the marginal S8 distribution
-; Note that s_8_input is a proxy for S8 when sampling in S8 rather than As
+; Note that CosmoSIS v3 onwards can sample over S8
 [cosmological_parameters]
 omch2 = 0.051    0.11812972217650827    0.255
 ombh2 = 0.019    0.025939374402978773    0.026
 h0 =    0.64     0.7666550530735352    0.82
 n_s =  0.84    0.9007697522848085    1.1
-s_8_input = 0.1  0.7567464875805479    1.3
+S_8 = 0.1  0.7567464875805479    1.3
 omega_k = 0.0
 w       = -1.0
 wa      = 0.0
