--- a/shear/cosebis/modules/Makefile
+++ b/shear/cosebis/modules/Makefile
@@ -26,15 +26,12 @@ HEADER   = $(OBJS:.o=.h)
 	$(CXX)  $(CXXFLAGS) ${USER_CXXFLAGS} -c $<
 
 # make library
-all: besselzero04.h $(HEADER) $(OBJS)
+all: $(HEADER) $(OBJS) 
 	rm -f $(LIBNAME)
 	ar rv $(LIBNAME) $(OBJS)
 	ranlib $(LIBNAME)
 
-besselzero04.h:
-	python generate-bessel-zeros.py
-
 .PHONY: clean
 clean:
 	rm -f $(LIBNAME)
-	rm -f *.o besselzero04.h
+	rm -f *.o
