shear/Makefile: Added cosebis to the SUBDIRS list

--- a/shear/Makefile
+++ b/shear/Makefile
@@ -1,4 +1,4 @@
 include ${COSMOSIS_SRC_DIR}/config/compilers.mk
 include ${COSMOSIS_SRC_DIR}/config/subdirs.mk
 
-SUBDIRS = limber spectra spectra-ppf cl_to_xi_nicaea
+SUBDIRS = limber spectra spectra-ppf cl_to_xi_nicaea cosebis
