--- a/examples/planck.ini
+++ b/examples/planck.ini
@@ -34,13 +34,14 @@ data_3 = %(planck_path)s/low_l/simall/simall_100x143_offlike5_EE_Aplanck_B.clik
 ; and any other that modules in the pipeline may want (e.g. camb)
 [consistency]
 file = ./utility/consistency/consistency_interface.py
+cosmomc_theta = T
 
 
 [camb]
 file = boltzmann/camb/camb_interface.py
 mode = cmb
 lmax = 2800          ;max ell to use for cmb calculation
-feedback=2         ;amount of output to print
+feedback=1         ;amount of output to print
 AccuracyBoost=1.1 ;CAMB accuracy boost parameter
 do_tensors = True   ;include tensor modes
 do_lensing = true    ;lensing is required w/ Planck data
