--- a/examples/planck_values.ini
+++ b/examples/planck_values.ini
@@ -2,7 +2,7 @@
 a_planck = 1.0
 
 [cosmological_parameters]
-h0 = 0.6732       ;H0 (km/s/Mpc)/100.0km/s/Mpc 
+cosmomc_theta = 1.040909  ; this is actually 100 * theta_mc
 omega_k = 0.0     ;spatial curvature
 ombh2 = 0.022383
 omch2 = 0.12011
