--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           ./examples/get-planck-data.sh
           # And that the pipeline runs afterwards
           cosmosis examples/planck.ini | tee output/planck.log
-          grep -e 'Likelihood =  -1441.30' -e 'Likelihood =  -1441.46' output/planck.log
+          grep -e 'Likelihood =  -1441.14' -e 'Likelihood =  -1441.30' -e 'Likelihood =  -1441.46' output/planck.log
           
 
       - name: Class Planck
