set class planck cosmomc_theta setting

--- a/examples/planck_class.ini
+++ b/examples/planck_class.ini
@@ -34,6 +34,7 @@ data_3 = %(planck_path)s/low_l/simall/simall_100x143_offlike5_EE_Aplanck_B.clik
 ; and any other that modules in the pipeline may want (e.g. camb)
 [consistency]
 file = ./utility/consistency/consistency_interface.py
+cosmomc_theta = T
 
 [class]
 file = boltzmann/class/class_interface.py
