add cosmomc_theta=T to wmap test

--- a/examples/wmap.ini
+++ b/examples/wmap.ini
@@ -27,7 +27,7 @@ file = likelihood/wmap9/wmap_interface.so
 ; and any other that modules in the pipeline may want (e.g. camb)
 [consistency]
 file = ./utility/consistency/consistency_interface.py
-
+cosmomc_theta = T
 
 [camb]
 file = boltzmann/camb/camb_interface.py
