examples/des-y3_and_kids-1000.ini:
Added in polychord settings

--- a/examples/des-y3_and_kids-1000.ini
+++ b/examples/des-y3_and_kids-1000.ini
@@ -1,13 +1,3 @@
-; This is currently set up to run a quick test sampler
-; TODO add info on the polychord settings
-[runtime]
-sampler = test
-verbosity = standard
-
-[test]
-save_dir=output/des-y3_and_kids-1000
-fatal_errors=T
-
 ; We will carry out a joint Hybrid pipeline analysis of 
 ; DES Y3 xi_pm and KiDS-1000 COSEBIS including scale cuts (2'<theta_min<300')
 [DEFAULT]
@@ -32,7 +22,6 @@ extra_output =  cosmological_parameters/S_8 cosmological_parameters/sigma_8
                 delta_z_out_des/bin_1 delta_z_out_des/bin_2 delta_z_out_des/bin_3 
                 delta_z_out_des/bin_4 
                 data_vector/2pt_chi2 likelihoods/cosebis_like likelihoods/2pt_like
-quiet = F
 timing = F
 debug = T
 
@@ -52,9 +41,6 @@ zmid = 2.0
 nz_mid = 100
 zmax = 6.0
 nz = 150
-background_zmax = 6.0
-background_zmin = 0.0
-background_nz = 6000
 feedback=0
 
 [extrapolate]
@@ -90,8 +76,7 @@ mode = additive
 sample = nz_source_des
 bias_section = wl_photoz_errors_des
 interpolation = cubic
-output_deltaz = T
-output_section_name = delta_z_out_des
+output_deltaz_section_name = delta_z_out_des
 
 [photoz_bias_kids]
 file = number_density/photoz_bias/photoz_bias.py
@@ -99,13 +84,12 @@ mode = additive
 sample = nz_source_kids
 bias_section = nofz_shifts_kids
 interpolation = cubic
-output_deltaz = T
-output_section_name = delta_z_out_kids
+output_deltaz_section_name = delta_z_out_kids
 
 ; Here we are using the TATT modules for our IA model
 ; to allow for flexibility in extensions to our fiducial analyses
 ; The hybrid set-up uses NLA-z, with the non-NLA parameters
-; in the TATT model are set to zero in the values file
+; in the TATT model set to zero in the values file
 
 [fast_pt]
 file = structure/fast_pt/fast_pt_interface.py
@@ -123,12 +107,8 @@ suffix = des
 [IA]
 file = intrinsic_alignments/tatt/tatt_interface.py
 sub_lowk=F
-sub_const=F
-include_s2_terms=F
 do_galaxy_intrinsic=F
 ia_model=tatt
-Asigma8=F
-linterp=F
 
 ; As DES and KiDS are assumed to be uncorrelated we can 
 ; calculate the likelihoods independently
@@ -171,10 +151,10 @@ m_per_bin = True
 cl_section = shear_xi_plus shear_xi_minus
 verbose = F
 
-; This is the 2pt_likelihood module.  It's all-singing all-dancing
+; This is the DES Y3 2pt_likelihood module.  It's all-singing all-dancing
 ; covering xi_pm, gamma_t and wtheta. 
 ; Don't be confused by the name "point mass" in the title.
-; This addition only concerns the likelihood calculation of the GGL statistic
+; This point only concerns the likelihood calculation of the GGL statistic
 ; which we're not analysing here (data_sets = xip xim)
 [2pt_like]
 file = likelihood/2pt/2pt_point_mass/2pt_point_mass.py
@@ -185,7 +165,6 @@ no_det_fac = False
 include_norm = False
 data_file = %(DATAFILE)s
 data_sets = xip xim
-make_covariance=F
 covmat_name=COVMAT
 ; The scale cuts (angle_range_xi*_*_*) are listed in a separate file
 ; Here we use the LCDM-optimised scale cuts from Amon/Secco/Samuroff et al 2022
@@ -215,19 +194,59 @@ get_kernel_peaks = F
 sig_over_dchi = 20. 
 shear_kernel_dchi = 10.
 
+;This calculates COSEBIs from Cls
 [cosebis]
-file=/Users/cheymans/CosmoSIS/2pt_stats/cl_to_cosebis/cl_to_cosebis_interface.so
-theta_min = 2.0 ; default=1
-theta_max = 300.0 ; default=100
-n_max = 5 ; default=10
+file=shear/cosebis/cl_to_cosebis/cl_to_cosebis_interface.so
+theta_min = 2.0 ; default=0.5
+theta_max = 300.0 ; default=300
+n_max = 5 ; default=5
 input_section_name = shear_cl
 output_section_name = cosebis
-;Wn_Output_FolderName = ${BASE}/modules/kids/cosebis/WnLog/ 
-;Roots_n_Norms_FolderName = ${BASE}/modules/kids/cosebis/TLogsRootsAndNorms ; default is ./cosebis/TLogsRootsAndNorms
-;Tn_Output_FolderName = ${BASE}/modules/kids/cosebis/Tn_Output_Folder ; default is ./cosebis/TpnLog/
 
+;This is a simplified version of the the KiDS-1000 2pt_likelihood module
+;which is not all-singing nor all-dancing because we only need to
+;analyse COSEBIs for this Joint DES+KiDS analysis
 [cosebis_like]
 file = likelihood/2pt/simple_like.py
 data_set = En n
 data_file = %(DATAFILE)s
 like_name = cosebis
+;If you're interested in using KiDS-1000 data products other than COSEBIs
+;The 2pt-likelihood that KiDS-1000 used for their 3x2pt analysis can be found
+;on the KiDS-1000 KCAP repo: 
+;https://github.com/KiDS-WL/kcap/blob/master/modules/scale_cuts/scale_cuts.py
+;https://github.com/KiDS-WL/kcap/blob/master/utils/mini_like.py
+
+
+; If I run on the command line "cosmosis examples/des-y3_and_kids-1000.ini", this will run this quick test sampler.
+[runtime]
+sampler = test
+verbosity = standard
+; saving the output to output/des-y3_and_kids-1000
+[test]
+save_dir=output/%(RUN_NAME)s
+fatal_errors=T
+
+; If I run command "cosmosis examples/des-y3_and_kids-1000.ini runtime.sampler='polychord'", this will run polychord.
+; These are the settings used for the Hybrid DES+KiDS analysis, but be warned it's CPU intensive. 
+[polychord]
+base_dir = chain_checkpoints
+polychord_outfile_root=poly_%(RUN_NAME)s
+resume=F
+feedback = 3
+fast_fraction = 0.1
+;Minimum settings for a "good enough" quick test
+;live_points = 250
+;num_repeats = 30
+;tolerance = 0.1
+;Settings for high quality paper runs
+live_points = 500
+num_repeats=60
+tolerance=0.01
+boost_posteriors=10.0
+
+[output]
+filename= chain_%(RUN_NAME)s.txt
+format=text
+lock=F
+privacy=F
